# phoenix_directors_rota

./: HISTORY.md  justfile  pyproject.toml  requirements.txt
.gitA/: config  index
.gitA/logs/: HEAD
.gitA/logs/refs/heads/: main
.gitA/refs/heads/: main
src/directors_rota/: __init__.py  config.py  constants.py  emails.py  main.py  main_menu.py  module_caller.py  process.py  root.py  text.py
src/directors_rota/forms/: frm_config.py  frm_email.py  frm_main.py
tests/: test_rota.py  test_version.py
tests/test_data/: directors-rota.xlsx
