[project]
name = "directors-rota"
version = "1.1.5"
description = "Create director's rota for Phoenix Bridge Club"
authors = [{name = "Jeff", "email" = "<jeffwatkins2000@gmail.com>"}]
readme = "README.md"
requires-python = '>=3.13'

include = [
    "HISTORY.md",
    "src/directors_rota/images/*.png",
    "src/directors_rota/images/*.ico",
    ]

dependencies = [
    "appdirs>=1.4.4",
    "asttokens>=3.0.0",
    "clipboard>=0.0.4",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "et-xmlfile>=2.0.0",
    "executing>=2.2.0",
    "icecream>=2.1.4",
    "iniconfig>=2.1.0",
    "markdown>=3.8",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pillow>=11.2.1",
    "pluggy>=1.6.0",
    "psi-toml>=0.0.18",
    "psiutils>=0.2.10",
    "psiutils>=0.1.70",
    "pygments>=2.19.1",
    "pyperclip>=1.9.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "six>=1.17.0",
    "structlog>=25.4.0",
    "termcolor>=3.1.0",
    "tkinterweb>=4.3.1",
    "tkinterweb-tkhtml>=1.0",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "workbooky>=0.0.5",
    "pygobject>=3.54.2",
]

[dependency-groups]
dev = ['pytest']

[build-system]
requires = ['uv-build']
build-backend = 'uv_build'
